--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <script src="three.min.js"></script>
     <script src="OrbitControls.js"></script>
     <script src="ColladaLoader.js"></script>
+    <script src="Detector.js"></script>
+    <script src="Clock.js"></script>
+    <script src="THREEx.KeyboardState.js"></script>
+    <script src="FirstPersonControls.js"></script>
 </head>
 <body>
     <script src="main.js"></script>
