--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="three.min.js"></script>
+</head>
+<body>
+	<script src="three.min.js"></script>
     <script src="OrbitControls.js"></script>
     <script src="ColladaLoader.js"></script>
     <script src="Detector.js"></script>
     <script src="Clock.js"></script>
     <script src="THREEx.KeyboardState.js"></script>
     <script src="FirstPersonControls.js"></script>
-</head>
-<body>
+	<script src="THREEx.FullScreen.js"></script>
+	<script src="THREEx.WindowResize.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
