Added fog and obj 3d model import

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 	<script src="three.min.js"></script>
     <script src="OrbitControls.js"></script>
     <script src="ColladaLoader.js"></script>
+    <script src="OBJLoader.js"></script>
+
     <script src="Detector.js"></script>
     <script src="Clock.js"></script>
     <script src="THREEx.KeyboardState.js"></script>
     <script src="FirstPersonControls.js"></script>
 	 <script src="THREEx.FullScreen.js"></script>
 	 <script src="THREEx.WindowResize.js"></script>
-    <script src="main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 </html>
