object clicked rotation

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <script src="Clock.js"></script>
     <script src="THREEx.KeyboardState.js"></script>
     <script src="FirstPersonControls.js"></script>
-	 <script src="THREEx.FullScreen.js"></script>
-	 <script src="THREEx.WindowResize.js"></script>
-  <script src="main.js"></script>
-
+	<script src="THREEx.FullScreen.js"></script>
+	<script src="THREEx.WindowResize.js"></script>
+    <script src="main.js"></script>
+    
+    <input type="button" id="rotateleftbtn" value="ROTATE LEFT"/>
+    <input type="button" id="rotaterightbtn" value="ROTATE RIGHT"/>
 </body>
 </html>
