nav centered and color changes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>   
     <style>
     nav {
-      background-color: #fff;
+      background-color: #330066;
       border: 1px solid #dedede;
       border-radius: 4px;
       box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
-      color: #707;
+      color: #111;
       display: block;
-      margin: 8px 22px 8px 22px;
+      margin: 10px 300px 10px 300px;
       overflow: hidden;
       width: 90%; 
     }
@@ -48,7 +48,7 @@
           }
 
           nav > ul > li > a {
-            color: #aaa;
+            color: #000;
             display: block;
             line-height: 56px;
             padding: 0 24px;
@@ -145,8 +145,8 @@
     <nav>
     <ul>
         <li><a href="home.html">Blog</a></li>
+        <!--
         <li><a href="products.html">About<span class="caret"></span></a>
-            <!--
             <div>
                 <ul>
                     <li><a href="products.html#chair">Chair</a></li>
@@ -154,9 +154,9 @@
                     <li><a href="cooker.html">Cooker</a></li>
                 </ul>
             </div>
-            -->
-        </li>
-        <li><a href="about.html">Résumé</a></li>
+        </li>-->
+        <li><a href="about.html">About</a></li>
+        <li><a href="resume.html">Résumé</a></li>
         <li><a href="help.html">Help</a></li>
     </ul>
     </nav>
