nav centered and color changes

--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <style>
     nav {
       background-color: #330066;
-      border: 1px solid #dedede;
-      border-radius: 4px;
-      box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
-      color: #111;
+      color: #3A4145;
       display: block;
       margin: 8px 100px 8px 60px;
       overflow: hidden;
-      width: 90%; 
+      width: 60%; 
     }
 
       nav ul {
