nav centered and color changes

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>   
     <style>
     nav {
-      background-color: #330066;
       color: #3A4145;
       display: block;
       margin: 8px 100px 8px 60px;
       overflow: hidden;
-      width: 60%; 
+      width: 100%; 
     }
 
       nav ul {
@@ -29,7 +28,7 @@
         }
           
           nav > ul > li > a > .caret {
-            border-top: 4px solid #aaa;
+            border-top: 4px solid #3A4145;
             border-right: 4px solid transparent;
             border-left: 4px solid transparent;
             content: "";
