nav centered and color changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     nav {
       color: #3A4145;
       display: block;
-      margin: 8px 100px 8px 60px;
       overflow: hidden;
       width: 100%; 
     }
@@ -153,7 +152,7 @@
         </li>-->
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Résumé</a></li>
-        <li><a href="help.html">Help</a></li>
+        <li><a href="help.html">Projects</a></li>
     </ul>
     </nav>
 
@@ -184,6 +183,7 @@ To add new posts, simply add a file in the <code>_posts</code> directory that fo
 
         </section>
     </article>
+    
 
     <nav class="pagination" role="pagination">
         <span class="page-number"> Page 1 of 1 </span>
