--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
             <p><font size="6">Education</font></p>  
                 <ul>
                     <li><font size="4"><a href="http://www.ccny.cuny.edu/">CUNY The City College of New York</a>
-                    <br><font size="3">B.S. in Computer Science [2013 - present]</li>
+                    <br><font size="3">B.S. in Computer Science [2013 - present]</li><br>
                 
                     <li><font size="4"><a href="http://www.citytech.cuny.edu/">CUNY New York City College of Technology</a>
                     <br><font size="3">A.A.S in Computer Science [2011 - 2013]</li>
@@ -44,15 +44,15 @@
             <p><font size="6">Projects</font></p>  
                 <ul>
                     <li><font size="4"><a>Simulation of 3-Dimensional LED Cube Display</a>
-                    <br><font size="3">Desktop Application created using OpenGL and Qt</li>
+                    <br><font size="3">Desktop Application created using OpenGL and Qt</li><br>
 
                     <li><font size="4"><a>Virtual Interactive Supermarket</a>
-                    <br><font size="3">Web Browser Application created using Three.Js</li>
+                    <br><font size="3">Web Browser Application created using Three.Js</li><br>
 
                     <li><font size="4"><a>Confirming the “Randomness” of the Matlab Random Number Generator</a>
-                    <br><font size="3">Proving that the rand() function is indeed pseudo-random</li>
+                    <br><font size="3">Proving that the rand() function is indeed pseudo-random</li><br>
                 </ul>
-
+                
         </section>
 
     </article>
