--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           }
 
             nav > ul > li:hover {
-              background-color: #330066;
+              background-color: #0086B3;
             }
 
             nav > ul > li:hover > a {
@@ -63,7 +63,7 @@
             }
           
           nav > ul > li > div {
-            background-color: rgb( 40, 44, 47 );
+            background-color: #0086B3;
             border-top: 0;
             border-radius: 0 0 4px 4px;
             box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
@@ -183,7 +183,7 @@ To add new posts, simply add a file in the <code>_posts</code> directory that fo
 
         </section>
     </article>
-    
+
 
     <nav class="pagination" role="pagination">
         <span class="page-number"> Page 1 of 1 </span>
