--- a/resume.html
+++ b/resume.html
@@ -51,6 +51,10 @@
 
                     <li><font size="4"><a>Confirming the “Randomness” of the Matlab Random Number Generator</a>
                     <br><font size="3">Proving that the rand() function is indeed pseudo-random</li><br>
+
+                    <li><font size="4"><a>Matrix Multiplication Using Streaming SIMD Extensions (SSE) Instruction Set</a>
+                    <br><font size="3">Showing Vectorization code is faster than scaler code</li><br>
+
                 </ul>
                 
         </section>
