updated projects page

--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,18 @@
                     <br><font size="3">Showing Vectorization code is faster than scaler code</li>
                     <font size="3"><a href="http://www.scribd.com/doc/229239702/Matrix-Multiplication-Using-SIMD-Technologies">View Paper<a>  |  <a href="https://github.com/gsinghware/MatrixMulti_SIMDTechnologies/blob/master/Matrix_Multiplication.cpp">Source Code</a></li><br>
 
+                    <br><li><font size="4"><a>SolidWorks 3D Modeling and Python Image Processing</a>
+                    <br><font size="3">Designed Server Room using SolidWorks, and Image Processing using Histogram Equalization Technique</li>
+                    <font size="3"><a href="http://www.scribd.com/doc/229246039/Gurpreet-Singh-OSRS-Presentation">View Presentation</a><br>
+
+                    <br><li><font size="4"><a>Knapsack Problem</a>
+                    <br><font size="3">0/1 Knapsack and Fractional Kanpsack Problem Solution</li>
+                    <font size="3"><a href="http://www.scribd.com/doc/229247787/Knapsack-Problem">View Paper</a>  |  <a href="https://github.com/gsinghware/CSC220_Algorithms/blob/master/project_3.py">Source Code</a></li><br>
+
+                    <br><li><font size="4"><a>Fun With Searches and Sorts!</a>
+                    <br><font size="3">Linear Searches, Quadratic Sorts, Logarithmic Sorts</li>
+                    <font size="3"><a href="http://www.scribd.com/doc/229247788/Fun-With-Sorts-and-Searches">View Paper</a>  |  <a href="https://github.com/gsinghware/CSC220_Algorithms/tree/master/Project_1%20%26%20Project_2">Source Code</a></li><br>
+
                 </ul>
         </section>
 
