--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="vertical">
         <div class="site-head-content" class="inner">
             <h1 class="blog-title">Gurpreet Singh</h1>
-            <h2 class="blog-description">My Blog</h2>
+            <h2 class="blog-description">My Blog testing</h2>
         </div>
     </div>
     </header>
