simple navbar, added links for buttons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/gsingh.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+     
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Gurpreet Singh</a>
+                </div>
+                <div>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Resume</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
     </head>
 
     <body>
@@ -75,7 +93,10 @@
                                             Money Recognition System
                                         </div>
                                         <div class="panel-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                                            <p>Language: python (opencv library)</p>
+
+                                            <a href="#" class="btn btn-sm btn-info">source code</a>
+                                            <a href="#" class="btn btn-sm btn-success">read document</a>
                                         </div>
 
                                     </div>
@@ -83,10 +104,12 @@
                                 <div class="col-lg-4">
                                     <div class="panel panel-warning">
                                         <div class="panel-heading">
-                                            Vision: Image Enhancement and Feature Detection Project
+                                            Image Enhancement and Feature Detection
                                         </div>
                                         <div class="panel-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                                            <p>Language: MATLAB</p>
+                                            <a href="https://github.com/gsinghware/Image-Enhancement-and-Feature-Detection-project" class="btn btn-sm btn-info">source code</a>
+                                            <a href="#" class="btn btn-sm btn-success">read document</a>
                                         </div>
                                     </div>
                                 </div>
@@ -97,7 +120,9 @@
                                             Cloud Weather State Visualization using D3
                                         </div>
                                         <div class="panel-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                                            <p>Language: javascript (d3.js library)</p>
+                                            <a href="https://bitbucket.org/gurusingh/cloud_cluster_visualization" class="btn btn-sm btn-info">source code</a>
+                                            <a href="#" class="btn btn-sm btn-success">read document</a>
                                         </div>
                                     </div>
                                 </div>
@@ -111,7 +136,9 @@
                                             Pascal Compiler
                                         </div>
                                         <div class="panel-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                                            <p>Language: C++</p>
+                                            <a href="https://github.com/gsinghware/pascal_compiler" class="btn btn-sm btn-info">source code</a>
+                                            <a href="#" class="btn btn-sm btn-success">read document</a>
                                         </div>
 
                                     </div>
@@ -122,7 +149,9 @@
                                             Virtual SuperMarket Using Three.Js
                                         </div>
                                         <div class="panel-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                                            <p>Language: javascript (three.js library)</p>
+                                            <a href="https://github.com/gsinghware/VirtualSuperMarket_ThreeJS" class="btn btn-sm btn-info">source code</a>
+                                            <a href="#" class="btn btn-sm btn-success">read document</a>
                                         </div>
                                     </div>
                                 </div>
@@ -132,7 +161,9 @@
                                             3D LEDCube Simulation using Qt and OpenGL
                                         </div>
                                         <div class="panel-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                                            <p>Language: C++ (Qt, OpenGL library)</p>
+                                            <a href="https://github.com/gsinghware/LEDcube_Simulation" class="btn btn-sm btn-info">source code</a>
+                                            <a href="#" class="btn btn-sm btn-success">read document</a>
                                         </div>
                                     </div>
                                 </div>
@@ -145,9 +176,10 @@
                                             The Little Schemer Lazy Evaluation Interpreter
                                         </div>
                                         <div class="panel-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                                            <p>Language: Scheme</p>
+                                            <a href="#" class="btn btn-sm btn-info">source code</a>
+                                            <a href="#" class="btn btn-sm btn-success">read document</a>
                                         </div>
-
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
@@ -156,18 +188,22 @@
                                             bookBin - Online Book Store using MySQL, PHP
                                         </div>
                                         <div class="panel-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                                            <p>Language: PHP, MySQL</p>
+                                            <a href="https://github.com/gsinghware/book_store" class="btn btn-sm btn-info">source code</a>
+                                            <a href="#" class="btn btn-sm btn-success">read document</a>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-4">
-                                    <div class="panel panel-warning">
+                                    <div class="panel panel-danger">
                                         <div class="panel-heading">
                                             Algorithms Projects
                                         </div>
                                         <div class="panel-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
+                                            <p>Language: C++, python</p>
+                                            <a href="https://github.com/gsinghware/CSC220_Algorithms" class="btn btn-sm btn-info">source code</a>
+                                            <a href="#" class="btn btn-sm btn-success">read document</a>
                                         </div>
                                     </div>
                                 </div>
