updated about page

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ title: "About"
   <p>"Men of few words are the best men." - William Shakespeare, Henry V</p>
 
   <p>
-    I'm <strong>Gurpreet Singh</strong> &lt;<a href="mailto:gsinghbox@gmail.com">gsinghbox@gmail.com</a>&gt;, a programmer, student, and a scientist.
+    I'm <strong>Gurpreet Singh</strong> &lt;<a href="mailto:gsinghbox@gmail.com">gsinghbox@gmail.com</a>&gt;, a programmer, student, and a computer scientist.
   </p>
 
   <p>
@@ -18,7 +18,7 @@ title: "About"
   </p>
 
   <p>
-  	I like to play chess (not that good), read about world history, and watch anime and sports (cricket, soccer, etc.). Ronaldo over messi, and Tendulkar over any sportsmen.
+  	I like to play chess (not very good at it), read about world history, and watch anime and sports (cricket, soccer, etc). I think Tendulkar is the greatest cricketer and Ronaldo is the greatest footballer ever. I also like rap music, and the Legendary Eminem is my favorite rap artist.
   </p>
 
   <p>ok, bye.
