--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: layout
 title: "Posts"
 ---
 
+
 <section class="content">
+  <h1>Posts</h1>
+
   <ul class="listing">
     {% for post in site.posts %}
       {% unless post.draft %}
