adding google meta-tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: layout
 title: "Posts"
 ---
-
+<meta name="google-site-verification" content="2BMAdY9YwHNMc0GJZ86_YoleLY2t8uIfyrEDI_IUNWY" />
 <section class="content">
   <h1>Posts</h1>
   
